<resources>
    <string name="app_name">dorset_mobile_app_2</string>
    <string name="welcome_to_dorset_mobile_app">Welcome to Dorset Mobile App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_android">Hello Android</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_in_button">Sign in</string>
</resources>